Add route to update task

--- a/src/static/locales/pt-BR.json
+++ b/src/static/locales/pt-BR.json
@@ -6,5 +6,6 @@
 	"validated": "Válido!",
 	"app.title": "CIG: Plataforma de Comercialização de Índio Gigante",
 	"app.description": "Documentação da API",
-	"messages.success": "Boa!"
+	"messages.success": "Boa!",
+	"messages.updated": "Atualizado!"
 }
