Add route to delete task

--- a/src/static/locales/pt-BR.json
+++ b/src/static/locales/pt-BR.json
@@ -7,5 +7,6 @@
 	"app.title": "CIG: Plataforma de Comercialização de Índio Gigante",
 	"app.description": "Documentação da API",
 	"messages.success": "Boa!",
-	"messages.updated": "Atualizado!"
+	"messages.updated": "Atualizado!",
+	"common.deleted": "Removido!"
 }
