--- a/src/static/locales/pt-BR.json
+++ b/src/static/locales/pt-BR.json
@@ -5,5 +5,8 @@
 	"required-field": "{{field}} é obrigatório",
 	"validated": "Válido!",
 	"app.title": "CIG: Plataforma de Comercialização de Índio Gigante",
-	"app.description": "Documentação da API"
+	"app.description": "Documentação da API",
+	"messages.success": "Boa!",
+	"messages.updated": "Atualizado!",
+	"common.deleted": "Removido!"
 }
